Since the site would not publish to a sub folder, changed links to work based on root folder.

--- a/ArraySpeedCompare/Pages/Shared/_Layout.cshtml
+++ b/ArraySpeedCompare/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ArraySpeedCompare</title>
+    <title>@ViewData["Title"] - Teaching Tools</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">ArraySpeedCompare</a>
+                <a asp-page="/Index" class="navbar-brand">Teaching Tools</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
+                    <li><a href="/PostVGet/">Post vs. Get</a></li>
+                    <li><a href="/PostVGet/Reader/">Form Reader</a></li>
                 </ul>
             </div>
         </div>
